fix(orga): update spacing between block on PageTitle component

--- a/orga/app/styles/components/index/organization-information.scss
+++ b/orga/app/styles/components/index/organization-information.scss
@@ -4,6 +4,6 @@
   &__title {
     @extend %pix-title-xs;
 
-    margin: var(--pix-spacing-8x) 0 var(--pix-spacing-4x);
+    margin-bottom: var(--pix-spacing-4x);
   }
 }
